@@ -7,6 +7,7 @@ Minor CSS changes
 Changed text on Discover button
 Updated footer links sitewide, includes translations
 Updated hover states of graphs for publisher and recipient pages
+Height and line-height fix for graphs of different tallness
 
 
 Development Portal (2016-06-22 shi)
